--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "postinstall": "node symlink.js",
         "ng": "ng",
-        "start": "ng serve --proxy-config proxy.conf.json",
+        "start": "ng serve --open --proxy-config proxy.conf.json",
         "build": "ng build",
         "test": "ng test",
         "lint": "ng lint",
@@ -14,10 +14,12 @@
     "private": true,
     "dependencies": {
         "@angular/animations": "^5.2.0",
+        "@angular/cdk": "^5.2.0",
         "@angular/common": "^5.2.0",
         "@angular/compiler": "^5.2.0",
         "@angular/core": "^5.2.0",
         "@angular/forms": "^5.2.0",
+        "@angular/material": "^5.2.0",
         "@angular/platform-browser": "^5.2.0",
         "@angular/platform-browser-dynamic": "^5.2.0",
         "@angular/router": "^5.2.0",
