--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@ngx-translate/core": "^9.1.1",
         "@ngx-translate/http-loader": "2.0.1",
         "core-js": "^2.4.1",
+        "ngx-quill": "^3.2.0",
         "rxjs": "^5.5.2",
         "zone.js": "^0.8.14"
     },
